<resources>
    <string name="app_name">Age In Minutes</string>
    <string name="calculator_your">CALCULATOR YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">select date</string>
    <string name="selected_date">Selected Date</string>
    <string name="in_minutes_till_date">In minutes till date</string>
</resources>